# super-fiesta

./: .gitignore  README.md  flexi-code-reviewer.py  flexi-tech-team.py
.github/workflows/: pylint.yml
code-review-crew/src/: agents.py  main.py  tasks.py
dev_team/: README.md  pyproject.toml
dev_team/src/dev_team/: crew.py  main.py
polyglot_code_reviewer/: .gitignore  README.md  pyproject.toml
polyglot_code_reviewer/src/polyglot_code_reviewer/: crew.py  main.py
polyglot_code_reviewer/src/polyglot_code_reviewer/config/: agents.yaml  tasks.yaml
tech_agents/: architect_designer.py  code_generator.py  code_reviewer.py  deployment_manager.py  documentation_specialist.py  requirement_specifier.py  task_analyzer.py  test_engineer.py
